--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -1,15 +1,36 @@
 {
-    "login_title": "Login to your account",
-    "email": "E-mail",
-    "password": "Password",
-    "remember_me": "Remember Me",
-    "register": "Register",
-    "login": "Login",
-    "categories": "Categories",
-    "favorites": "Favorites",
-    "buy_now": "Buy Now",
-    "added_to_favorites": "Added to favorites!",
-    "removed_from_favorites": "Removed from favorites!",
-    "Product Catalog": "Product Catalog"
-  }
-  
+  "login_title": "Login to your account",
+  "email": "E-mail",
+  "password": "Password",
+  "remember_me": "Remember Me",
+  "register": "Register",
+  "login": "Login",
+  "categories": "Categories",
+  "favorites": "Favorites",
+  "buy_now": "Buy Now",
+  "added_to_favorites": "Added to favorites!",
+  "removed_from_favorites": "Removed from favorites!",
+  "Product Catalog": "Product Catalog",
+  "catalog": "Catalog",
+  "search_categories": "Search categories ...",
+  "view_all": "View All",
+  "best_seller": "Best Seller",
+  "no_products_found": "No products found",
+  "search_products": "Search products...",
+  "book_details": "Book Details",
+  "purchase_functionality": "Purchase functionality coming soon!",
+  "summary": "Summary",
+  "summary_not_available": "Summary not available.",
+  "splash_login": "Login",
+  "splash_skip": "Skip",
+  "register_title": "Register an account",
+  "name": "Name",
+  "register_button": "Register",
+  "login_button": "Login",
+  "password_length": "Password must be 6-20 characters",
+  "please_enter_password": "Please enter your password",
+  "welcome_back":"Welcome Back",
+  "welcome":"Welcome",
+  "login_successful":"Login Successful",
+  "purchase_functionality_coming_soon": "Purchase functionality coming soon"
+}
