--- a/assets/translations/tr.json
+++ b/assets/translations/tr.json
@@ -1,15 +1,36 @@
 {
-    "login_title": "Hesabınıza giriş yapın",
-    "email": "E-posta",
-    "password": "Şifre",
-    "remember_me": "Beni Hatırla",
-    "register": "Kayıt Ol",
-    "login": "Giriş Yap",
-    "categories": "Kategoriler",
-    "favorites": "Favoriler",
-    "buy_now": "Şimdi Satın Al",
-    "added_to_favorites": "Favorilere eklendi!",
-    "removed_from_favorites": "Favorilerden çıkarıldı!",
-    "Product Catalog": "Ürün Kataloğu"
-  }
-  
+  "login_title": "Hesabınıza giriş yapın",
+  "email": "E-posta",
+  "password": "Şifre",
+  "remember_me": "Beni Hatırla",
+  "register": "Kayıt Ol",
+  "login": "Giriş Yap",
+  "categories": "Kategoriler",
+  "favorites": "Favoriler",
+  "buy_now": "Şimdi Satın Al",
+  "added_to_favorites": "Favorilere eklendi!",
+  "removed_from_favorites": "Favorilerden çıkarıldı!",
+  "Product Catalog": "Ürün Kataloğu",
+  "catalog": "Katalog",
+  "search_categories": "Kategorilerde ara ...",
+  "view_all": "Tümünü Gör",
+  "best_seller": "En Çok Satanlar",
+  "no_products_found": "Ürün bulunamadı",
+  "search_products": "Ürünleri ara...",
+  "book_details": "Kitap Detayları",
+  "purchase_functionality": "Satın alma özelliği yakında gelecek!",
+  "summary": "Özet",
+  "summary_not_available": "Özet mevcut değil.",
+  "splash_login": "Giriş Yap",
+  "splash_skip": "Atla",
+  "register_title": "Bir hesap oluşturun",
+  "name": "Ad",
+  "register_button": "Kayıt Ol",
+  "login_button": "Giriş Yap",
+  "please_enter_password": "Lütfen şifrenizi girin",
+  "password_length": "Şifre 6-20 karakter olmalıdır",
+  "welcome_back":"Yeniden Hoş Geldiniz",
+  "welcome":"Hoş Geldiniz",
+  "login_successful":"Giriş Başarılı",
+  "purchase_functionality_coming_soon": "Satın Alma Fonksiyonu Yakında Gelecek"
+}
