--- a/assets/translations/tr.json
+++ b/assets/translations/tr.json
@@ -34,5 +34,7 @@
   "login_successful":"Giriş Başarılı",
   "purchase_functionality_coming_soon": "Satın Alma Fonksiyonu Yakında Gelecek",
   "please_enter_email":"Lütfen E-Mailinizi Giriniz",
-  "please_enter_valid_email":"Lütfen Geçerli Bir E-Mail Giriniz"
+  "please_enter_valid_email":"Lütfen Geçerli Bir E-Mail Giriniz",
+   "password_must_be_alphanumeric": "Şifre Alfanumeratik Olmalıdır",
+   "please_enter_name":"Lütfen İsim Giriniz"
 }
